Fix layout issue in .less source file that produces the CSS

--- a/public/stylesheets/pophealth.less
+++ b/public/stylesheets/pophealth.less
@@ -657,7 +657,7 @@ a {
 
 
 .tableMeasureTitle {
-  width: 255px;
+  width: 225px;
   margin-top:0.75em;
   padding-left:@measureDetailTable-padding;
   span {
@@ -691,11 +691,18 @@ a {
   height:3em;
   
 .measureStats {
-   width:150px;
+   width:205px;
    float:left;
    height:3em;
    vertical-align:middle;
    
+   .measureShortSubtitle {
+     display: inline-block;
+     text-align: right;
+     width: 75px;
+     font-size: 1.0em;
+     vertical-align: middle;
+   }
    .measurePopulationPercentage {
      display:inline-block;
      text-align:right;
